@@ -1,69 +1,69 @@
 [Tests]
-StringValue=Now is the time
-StringValue=for all good men
-StringValue=to come to the aid
-StringValue=of their country!
-IntegerValue=1234
-IntegerValue=2345
-IntegerValue=3456
-IntegerValue=4567
-HexValue=0x04D2
-HexValue=0x0929
-HexValue=0x0D80
-HexValue=0x11D7
-DoubleValue=3.1415928
-DoubleValue=6.2831856
-DoubleValue=9.4247784
-DoubleValue=12.5663712
-BoolYesValue=Yes
-BoolYesValue=No
-BoolYesValue=Yes
-BoolYesValue=Yes
-BoolNoValue=No
-BoolNoValue=Yes
-BoolNoValue=No
-BoolNoValue=No
-BoolOnValue=On
-BoolOnValue=Off
-BoolOnValue=On
-BoolOnValue=On
-BoolOffValue=Off
-BoolOffValue=On
-BoolOffValue=Off
-BoolOffValue=Off
-BoolTrueValue=True
-BoolTrueValue=False
-BoolTrueValue=True
-BoolTrueValue=True
 BoolFalseValue=False
 BoolFalseValue=True
 BoolFalseValue=False
 BoolFalseValue=False
+BoolNoValue=No
+BoolNoValue=Yes
+BoolNoValue=No
+BoolNoValue=No
+BoolOffValue=Off
+BoolOffValue=On
+BoolOffValue=Off
+BoolOffValue=Off
+BoolOnValue=On
+BoolOnValue=Off
+BoolOnValue=On
+BoolOnValue=On
 BoolOneValue=1
 BoolOneValue=0
 BoolOneValue=1
 BoolOneValue=1
+BoolTrueValue=True
+BoolTrueValue=False
+BoolTrueValue=True
+BoolTrueValue=True
+BoolYesValue=Yes
+BoolYesValue=No
+BoolYesValue=Yes
+BoolYesValue=Yes
 BoolZeroValue=0
 BoolZeroValue=1
 BoolZeroValue=0
 BoolZeroValue=0
-TimeHHMMMorningValue=09:30
-TimeHHMMMorningValue=10:30
-TimeHHMMMorningValue=11:30
-TimeHHMMMorningValue=12:30
-TimeHHMMEveningValue=21:30
-TimeHHMMEveningValue=22:15
-TimeHHMMEveningValue=23:30
-TimeHHMMEveningValue=23:45
-TimeHHMMSSMorningValue=09:30:45
-TimeHHMMSSMorningValue=10:30:45
-TimeHHMMSSMorningValue=11:30:45
-TimeHHMMSSMorningValue=11:45:45
-TimeHHMMSSEveningValue=21:30:45
-TimeHHMMSSEveningValue=22:30:45
-TimeHHMMSSEveningValue=22:30:45
-TimeHHMMSSEveningValue=23:30:45
+DoubleValue=3.1415928
+DoubleValue=6.2831856
+DoubleValue=9.4247784
+DoubleValue=12.5663712
+HexValue=0x04D2
+HexValue=0x0929
+HexValue=0x0D80
+HexValue=0x11D7
+IntegerValue=1234
+IntegerValue=2345
+IntegerValue=3456
+IntegerValue=4567
 IpAddressValidValue=1.2.3.4
 IpAddressValidValue=5.6.7.8
 IpAddressValidValue=6.7.8.9
 IpAddressValidValue=7.8.9.10
+StringValue=Now is the time
+StringValue=for all good men
+StringValue=to come to the aid
+StringValue=of their country!
+TimeHHMMEveningValue=21:30
+TimeHHMMEveningValue=22:15
+TimeHHMMEveningValue=23:30
+TimeHHMMEveningValue=23:45
+TimeHHMMMorningValue=09:30
+TimeHHMMMorningValue=10:30
+TimeHHMMMorningValue=11:30
+TimeHHMMMorningValue=12:30
+TimeHHMMSSEveningValue=21:30:45
+TimeHHMMSSEveningValue=22:30:45
+TimeHHMMSSEveningValue=22:30:45
+TimeHHMMSSEveningValue=23:30:45
+TimeHHMMSSMorningValue=09:30:45
+TimeHHMMSSMorningValue=10:30:45
+TimeHHMMSSMorningValue=11:30:45
+TimeHHMMSSMorningValue=11:45:45
